testing first version deployment in streamlit cloud

--- a/Model_training/Model_training.ipynb
+++ b/Model_training/Model_training.ipynb
@@ -14,35 +14,12 @@
    "id": "19a443fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T00:37:32.079229Z",
-     "start_time": "2024-10-19T00:37:08.144614Z"
-    }
+     "end_time": "2024-10-19T02:23:29.880104Z",
+     "start_time": "2024-10-19T02:23:29.874765Z"
+    },
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting scikit-learn==1.5.2\n",
-      "  Using cached scikit_learn-1.5.2-cp311-cp311-win_amd64.whl (11.0 MB)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in c:\\users\\nandan hegde\\anaconda3\\lib\\site-packages (from scikit-learn==1.5.2) (1.24.3)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\nandan hegde\\anaconda3\\lib\\site-packages (from scikit-learn==1.5.2) (1.10.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\nandan hegde\\anaconda3\\lib\\site-packages (from scikit-learn==1.5.2) (1.2.0)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn==1.5.2)\n",
-      "  Using cached threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scikit-learn\n",
-      "  Attempting uninstall: threadpoolctl\n",
-      "    Found existing installation: threadpoolctl 2.2.0\n",
-      "    Uninstalling threadpoolctl-2.2.0:\n",
-      "      Successfully uninstalled threadpoolctl-2.2.0\n",
-      "  Attempting uninstall: scikit-learn\n",
-      "    Found existing installation: scikit-learn 1.2.2\n",
-      "    Uninstalling scikit-learn-1.2.2:\n",
-      "      Successfully uninstalled scikit-learn-1.2.2\n",
-      "Successfully installed scikit-learn-1.5.2 threadpoolctl-3.5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install scikit-learn==1.5.2"
    ]
@@ -53,8 +30,8 @@
    "id": "e7f4899f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T00:37:35.100110Z",
-     "start_time": "2024-10-19T00:37:32.083647Z"
+     "end_time": "2024-10-19T02:23:33.198823Z",
+     "start_time": "2024-10-19T02:23:29.883918Z"
     }
    },
    "outputs": [
@@ -87,8 +64,8 @@
    "id": "5c1014fd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T00:37:35.107430Z",
-     "start_time": "2024-10-19T00:37:35.102813Z"
+     "end_time": "2024-10-19T02:23:33.210622Z",
+     "start_time": "2024-10-19T02:23:33.202270Z"
     }
    },
    "outputs": [
@@ -110,8 +87,8 @@
    "id": "62915eb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T00:38:16.944978Z",
-     "start_time": "2024-10-19T00:37:35.112237Z"
+     "end_time": "2024-10-19T02:23:39.923972Z",
+     "start_time": "2024-10-19T02:23:33.213848Z"
     }
    },
    "outputs": [
@@ -119,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy: 0.5059\n",
-      "Model and LabelEncoder saved to trained_cuisine_prediction_model.pkl\n"
+      "Model accuracy: 0.5030\n",
+      "Model and LabelEncoder saved to trained_cuisine_prediction_model_v2.pkl\n"
      ]
     }
    ],
@@ -133,7 +110,7 @@
     "    return balanced_df\n",
     "\n",
     "# Replace this with the path to your local pickle file\n",
-    "file_path = r\"C:\\Users\\Nandan Hegde\\OneDrive\\Documents\\GitHub\\MSU_CMSE830_Semester_projects\\NLP_NLG_Recipe_prediction_generation_app_data\\Sample_data\\balanced_sampled_recipes_dataset.pkl\"\n",
+    "file_path = r\"C:\\Users\\Nandan Hegde\\OneDrive\\Documents\\GitHub\\MSU_CMSE830_Semester_projects\\NLP_NLG_Recipe_prediction_generation_app_data\\Sample_data\\balanced_sampled_recipes_dataset_v2.pkl\"\n",
     "balanced_df = load_local_data(file_path)\n",
     "\n",
     "# Add a column for number of unique ingredients (just like in the app)\n",
@@ -163,7 +140,7 @@
     "\n",
     "# --- Step 5: Save the Model and Label Encoder ---\n",
     "# Save the trained model and label encoder to a pickle file\n",
-    "output_path = \"trained_cuisine_prediction_model.pkl\"\n",
+    "output_path = \"trained_cuisine_prediction_model_v2.pkl\"\n",
     "with open(output_path, 'wb') as f:\n",
     "    pickle.dump((model, le), f)\n",
     "\n",
