--- a/Sample_data/Sample_Data_streamlit.ipynb
+++ b/Sample_data/Sample_Data_streamlit.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cfe37baf",
+   "metadata": {},
+   "source": [
+    "# Lets create a sample data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b9867c3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:33:52.308786Z",
-     "start_time": "2024-10-18T07:33:51.445718Z"
+     "end_time": "2024-10-19T02:17:50.233081Z",
+     "start_time": "2024-10-19T02:17:48.908008Z"
     }
    },
    "outputs": [
@@ -31,8 +39,8 @@
    "id": "9f793b65",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:35:45.353054Z",
-     "start_time": "2024-10-18T07:33:52.310817Z"
+     "end_time": "2024-10-19T02:19:39.595222Z",
+     "start_time": "2024-10-19T02:17:50.236077Z"
     }
    },
    "outputs": [],
@@ -46,8 +54,8 @@
    "id": "fbf64b28",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:35:45.462848Z",
-     "start_time": "2024-10-18T07:35:45.403637Z"
+     "end_time": "2024-10-19T02:19:39.696951Z",
+     "start_time": "2024-10-19T02:19:39.633096Z"
     }
    },
    "outputs": [
@@ -55,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'italian': 500000, 'mexican': 225279, 'chinese': 217093, 'indian': 31884, 'mediterranean': 12208, 'southern_us': 9957, 'spanish': 1420, 'japanese': 1401, 'middle eastern': 280, 'vietnamese': 227, 'greek': 215, 'french': 10, 'jamaican': 7, 'moroccan': 5, 'brazilian': 5, 'cajun_creole': 1}\n"
+      "{'italian': 100000, 'mexican': 45055, 'chinese': 43418, 'indian': 6376, 'mediterranean': 2441, 'southern_us': 1991, 'spanish': 284, 'japanese': 280, 'middle eastern': 56, 'vietnamese': 45, 'greek': 43, 'french': 2, 'jamaican': 1, 'moroccan': 1, 'brazilian': 1, 'cajun_creole': 0}\n"
      ]
     }
    ],
@@ -81,7 +89,7 @@
     "}\n",
     "\n",
     "# Total sample size\n",
-    "sample_size = 1000000  # 1 million\n",
+    "sample_size = 200000  # 1 million\n",
     "\n",
     "# Calculate the total number of rows in the original dataset\n",
     "total_rows = sum(cuisine_counts.values())\n",
@@ -99,8 +107,8 @@
    "id": "73d2b405",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:35:45.475047Z",
-     "start_time": "2024-10-18T07:35:45.468015Z"
+     "end_time": "2024-10-19T02:19:39.709399Z",
+     "start_time": "2024-10-19T02:19:39.701171Z"
     }
    },
    "outputs": [],
@@ -114,8 +122,8 @@
    "id": "fc3cc7cd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:35:45.494314Z",
-     "start_time": "2024-10-18T07:35:45.487803Z"
+     "end_time": "2024-10-19T02:19:39.724272Z",
+     "start_time": "2024-10-19T02:19:39.717579Z"
     }
    },
    "outputs": [
@@ -137,8 +145,8 @@
    "id": "c630734f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:35:57.419919Z",
-     "start_time": "2024-10-18T07:35:45.499788Z"
+     "end_time": "2024-10-19T02:19:44.697140Z",
+     "start_time": "2024-10-19T02:19:39.728156Z"
     }
    },
    "outputs": [
@@ -146,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(999992, 9)\n"
+      "(199994, 9)\n"
      ]
     }
    ],
@@ -170,7 +178,7 @@
     "\n",
     "# Optionally save the sampled dataset to CSV\n",
     "# sampled_df.to_csv('balanced_sampled_recipes_dataset.csv', index=False)\n",
-    "sampled_df.to_pickle('balanced_sampled_recipes_dataset.pkl')"
+    "sampled_df.to_pickle('balanced_sampled_recipes_dataset_v2.pkl')"
    ]
   }
  ],
